# LogViewer

./: .gitignore  .gitmodules
.github/workflows/: build_project.yml
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/App/LogViewer/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  project_pch.h  settingsinfo.h
